<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_ingredients"
        android:text="@string/ingredients_title"
        android:textStyle="bold"
        android:textSize="@dimen/list_text_size"
        android:textColor="@android:color/black"
        android:layout_height="@dimen/list_item_height"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/ingredient_left_padding"
        android:paddingRight="@dimen/ingredient_left_padding"
        android:gravity="center_vertical"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_thickness"
        android:background="@android:color/darker_gray"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_steps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/list_padding"
        android:paddingBottom="@dimen/list_padding"
        />

</LinearLayout>