...
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"
        android:src="@drawable/img_placeholder"
        />

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exo_details_video"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintVertical_bias="@dimen/detail_vert_bias"
        app:layout_constraintHeight_max="@dimen/video_constr_height"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintBottom_toTopOf="@+id/tv_step_description"
...
